[package]
name = "abexp"
version = "0.1.0"
edition = "2024"

[lib]
name = "abexp"
path = "src/lib/lib.rs"

[[bin]]
name = "abexp_server"
path = "src/bin/server/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["from", "display"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["std", "derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
